semgrep/tests/e2e/snapshots/test_rule_parser/test_rule_parser__failure__error_messages/bad10/error.txt
error: null values prohibited
  --> rules/syntax/bad10.yaml:8
7 |     # This key is missing a value
8 |     pattern-either:
  |                    ^
9 |     languages: [python]

In semgrep YAML configuration, null values are prohibited

